padding fix on mobile comments

--- a/src/components/Comment/Comment.mobile.scss
+++ b/src/components/Comment/Comment.mobile.scss
@@ -10,9 +10,9 @@
       font-size: 13px;
     }
   }
-  .replies {
-    & > :first-child {
-      border-left: 1px solid $selago;
+  .comment-content {
+    .replies {
+      padding-left: 0px;
     }
   }
 }
